--- a/src/main/webapp/WEB-INF/SuperVillain.html
+++ b/src/main/webapp/WEB-INF/SuperVillain.html
@@ -1,10 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>SuperVillain</title>
+    <style>
+        p {
+            display: inline;
+            background-color: rgba(0, 0, 0, 0.5);
+            box-shadow: -10px 0 0 rgba(0, 0, 0, 0.5), 10px 0 0 rgba(0, 0, 0, 0.5);
+            padding: 0 10px 0 0;
+            color: #FFFFFF;
+            line-height: 125%;
+            font-family: Calibri;
+            text-align-all: justify;
+        }
+
+        ul {
+            color: #FFFFFF
+        }
+
+        h2 {
+            display: inline;
+            background-color: antiquewhite;
+            padding: 0 10px 0 0;
+            color: black;
+        }
+
+        h3 {
+            color: #FFFFFF
+        }
+
+        img {
+            float: right;
+            margin: 7px 0 7px 7px;
+            width: 200px;
+            height: 400px;
+        }
+
+    </style>
 </head>
-<body>
-$END$
+<body background="pictures/one.jpg">
+
+<h1 style="text-align: center; color: white; font-size: 300%">Джокер</h1>
+
+<div class="card"
+     style="width: 200px;float: right; background-color: rgba(0,0,0,0.73); color: #FFFFFF; text-align: center">
+    <img src="pictures/two.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+        <div class="card-text">Иллюстрация к серии комиксов «Бэтмен: Три Джокера» (2020), изображающая основные
+            воплощения Джокера от Золотого века (снизу) до Серебряного века (слева) и современной эпохи (справа).
+            Художник — Джейсон Фабок.
+        </div>
+    </div>
+</div>
+
+<p><strong>Джокер</strong>(DC Universe)( - англ.<i> Joker</i>)
+    суперзлодей DC Comics, главный и заклятый враг супергероя Бэтмена. Джокер носит фиолетовый костюм и сражается
+    при помощи предметов, которые стилизованы под реквизит клоуна. Считается одним из величайших персонажей и злодеев
+    комиксов, популярность которого позволила ему появиться во всевозможных продуктах массовой культуры.
+</p>
+<div>
+    <div class="row">
+        <div class="col-4">
+            <nav id="navbar-example3" class="h-300 flex-column align-items-stretch pe-4 border-end">
+                <nav class="nav nav-pills flex-column">
+                    <a class="nav-link" href="#item-1">Происхождение</a><br>
+                    <a class="nav-link" href="#item-2">Характеристика</a>
+                    <nav class="nav nav-pills flex-column">
+                        <a class="nav-link ms-3 my-1" href="#item-2-1">&nbsp;Личность</a><br>
+                        <a class="nav-link ms-3 my-1" href="#item-2-2">&nbsp;Силы и способности</a><br>
+                        <a class="nav-link ms-3 my-1" href="#item-2-3">&nbsp;Взаимоотношения</a><br>
+                        <a class="nav-link ms-3 my-1" href="#item-2-4">&nbsp;Осознание персонажа</a>
+                    </nav>
+                </nav>
+            </nav>
+        </div>
+
+        <div class="col-8">
+            <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true"
+                 class="scrollspy-example-2" tabindex="0">
+                <div id="item-1">
+                    <br><h2>Происхождение</h2><br>
+                    <p>Прошлое Джокера остаётся неоднозначным до сих пор, несмотря на более чем восьмидесятилетнюю
+                        историю
+                        персонажа. DC продолжают придерживаться теории Алана Мура о многовариантном прошлом зловещего
+                        клоуна.
+
+                        Возможно, даже сам Джокер уже не помнит, кем он был до того, как стал Джокером. По наиболее
+                        распространённой версии человек, ставший Джокером (возможно, он был неудачливым комедиантом, а,
+                        возможно, и гангстером), упал в кислоту, испугавшись Бэтмена, когда в костюме Красного колпака
+                        участвовал в ограблении карточной фабрики[43]. В результате он сошёл с ума, обрёл белую кожу,
+                        чёрные
+                        круги вокруг глаз и зелёные волосы, а на лице у него навсегда застыла улыбка. В дальнейшем
+                        Бэтмен и
+                        комиссар Гордон прилагают немало усилий для того, чтобы поймать Джокера. Им это удается, и
+                        злодея
+                        помещают в психиатрическую лечебницу Аркхэм, из которой Джокер впоследствии неоднократно
+                        сбегает.
+
+                        Однако, никаких официальных подтверждений происхождения Джокера не было. Многие из версий были
+                        отвергнуты как прикрытия или ложь о его прошлой жизни, либо ложь о том, что он не знает своего
+                        прошлого.</p>
+                </div>
+                <div id="item-2">
+                    <br><h2>Характеристика</h2><br>
+                </div>
+                <div id="item-2-1">
+                    <h3>Личность</h3>
+                    <p>Каждое преступление, будь то убийство, воровство или акт терроризма, для Джокера является
+                        театральным представлением, смешным только для него одного. Зрелище для злодея важнее успеха,
+                        если действо не зрелищно — то оно скучно.
+
+                        Джокер и Бэтмен являются противоположностями: экстравертный Джокер носит яркую одежду и творит
+                        хаос, в то время как интровертный и монохромный Бэтмен олицетворяет порядок и дисциплину. Часто
+                        изображается, что Джокер определяет своё существование через конфликт с Бэтменом. Злодею
+                        неоднократно представлялась возможность убить Тёмного Рыцаря, но он этого не делал. В одном из
+                        выпусков комиксов о Бэтмене Джокер восклицает: «Но если я пристрелю Бэтмена, с кем же мне
+                        играть?». Джокер считает, что без их игры победа бессмысленна.
+
+                        Хотя Джокер заявляет о своём безразличии ко всему, он втайне жаждет внимания и одобрения
+                        Бэтмена. Некоторые из действий Джокера направлены на то, чтобы заставить Бэтмена убивать:
+                        величайшей победой для злодея было бы сделать Бэтмена таким же, как он. Джокер не проявляет
+                        инстинкта самосохранения и без колебаний подвергает свою жизнь риску, чтобы доказать свою точку
+                        зрения. Он олицетворяет всё, чему противостоит Бэтмен.</p>
+                </div>
+                <div id="item-2-2">
+                    <h3>Силы и способности</h3>
+                    <p>Джокер не обладает никакими очевидно «сверхчеловеческими» способностями. Однако у злодея некое
+                        особенное видение мира и реальности. К тому же Джокеру неоднократно удавалось избежать смерти.
+                        Очень часто люди предполагали, что он погиб, но он возвращался вновь и вновь. В комиксах Джокера
+                        взрывали, в него стреляли, били током, он падал с высоты, но каждый раз являлся снова.
+
+                        Злодей является квалифицированным специалистом в области химии и технологий, экспертом по
+                        взрывчатым веществам.
+
+                        Подтверждение этому — знаменитый яд Джокера, который, помимо этого, известен под следующими
+                        названиями:</p>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Токсин Джокера</li>
+                        <li class="list-group-item">Веселящий газ</li>
+                        <li class="list-group-item">Газ Джокера</li>
+                        <li class="list-group-item">Сок Джокера</li>
+                        <li class="list-group-item">Смехотрикс</li>
+                        <li class="list-group-item">Перса-Улыбка</li>
+                        <li class="list-group-item">Усмехающаяся Смерть и др.</li>
+                    </ul>
+                </div>
+                <div id="item-2-3">
+                    <h3>Взаимоотношения</h3>
+                    <p>Джокер всегда демонстрировал и проявлял качества лидера. Доказательством этому служит то, что ему
+                        очень легко сколотить вокруг себя банду и заставить себе подчиняться. Со своими подчинёнными
+                        Джокер не церемонится и может запросто убить в зависимости от настроения. Джокер не доверяет
+                        никому, поэтому чаще всего относится к союзникам с такой же жестокостью, как и к врагам, лишь
+                        используя их для своих целей. Он привлекает приспешников иллюзией о том, что у него много денег,
+                        и запугивает: те, в свою очередь, слишком боятся Джокера, чтобы отказаться от его требований или
+                        не смеяться над его жуткими шутками.
+
+                        Со всей своей непредсказуемостью и отсутствием сверхчеловеческих способностей Джокер объединил
+                        вокруг себя сотни злодеев в ограниченной серии «Спасительное бегство[en]» (2007—2008), так как
+                        те боялись его больше, чем альтернативы — Лекса Лютора.
+
+                        Ближайшая подруга-подельница Джокера и наиболее долго с ним «сотрудничавшая» — Харли Квинн.</p>
+                </div>
+                <div id="item-2-4">
+                    <h3>Осознание персонажа</h3>
+                    <p>Джокер многократно ломает «четвёртую стену» и, похоже, прекрасно понимает, что является
+                        персонажем комикса. В комиксах он порой напрямую обращается к читателю. Как пример можно
+                        привести серию комиксов «Психушка Джокера» (англ. Joker’s Asylum) из девяти выпусков, в которых
+                        Джокер рассказывает о себе и других известных злодеях Готэма.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<a class="btn btn-primary"
+   href="https://ru.wikipedia.org/wiki/%D0%94%D0%B6%D0%BE%D0%BA%D0%B5%D1%80_(DC_Comics)"
+   role="button">Ссылка на источник</a>
 </body>
 </html>
